<resources>
    <string name="app_name">ToDoMap</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>

    <string name="home_welcome">Welcome to ToDoMap</string>
    <string name="no_todos_yet">No todos yet. Tap + to add one!</string>

    <string name="map_placeholder">Map View</string>
    <string name="map_description">Your todo items on a map will appear here</string>
    <string name="map_loading">Loading map...</string>
    <string name="my_location">My location</string>

    <string name="settings_placeholder">Settings</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_enable_notifications">Enable location notifications</string>
    <string name="settings_enable_notifications_desc">Get notified when you\'re near a todo location</string>
    <string name="settings_default_radius">Default notification radius</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version 1.0</string>

    <string name="add_todo">Add Todo</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="hint_title">Title *</string>
    <string name="hint_description">Description</string>
    <string name="hint_location_name">Location name</string>
    <string name="location_section_title">Location</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="notify_when_near">Notify me when I\'m near this location</string>
    <string name="notification_radius">Notification radius</string>
    <string name="radius_meters">%1$d meters</string>
    <string name="radius_meters_default">100 meters</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="error_title_required">Title is required</string>
    <string name="todo_added">Todo added successfully</string>
    <string name="todo_updated">Todo updated successfully</string>
    <string name="todo_deleted">Todo deleted</string>

    <string name="no_location_set">No location set</string>
    <string name="location_icon_description">Location indicator</string>

    <string name="delete_todo_title">Delete Todo</string>
    <string name="delete_todo_message">Are you sure you want to delete this todo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Notification strings -->
    <string name="notification_channel_geofence">Location Reminders</string>
    <string name="notification_channel_geofence_desc">Notifications when you\'re near a todo location</string>
    <string name="notification_channel_general">General Notifications</string>
    <string name="notification_channel_general_desc">General app notifications</string>
    <string name="notification_nearby_todo">You\'re near a todo!</string>

    <!-- Permission strings -->
    <string name="permission_location_rationale">Location permission is needed to show your position on the map and notify you when you\'re near a todo location.</string>
    <string name="permission_background_location_rationale">Background location permission is needed to notify you when you\'re near a todo location even when the app is closed.</string>
    <string name="permission_notification_rationale">Notification permission is needed to alert you when you\'re near a todo location.</string>
    <string name="grant_permission">Grant Permission</string>

    <!-- Location picker -->
    <string name="pick_location">Pick Location</string>
    <string name="tap_to_select_location">Tap on the map to select location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="location_selected">Location selected</string>
    <string name="coordinates_format" formatted="false">Lat: %.6f, Lng: %.6f</string>

    <!-- Additional strings for delete functionality -->
    <string name="select_todos_to_delete">Select at least one todo to delete.</string>
    <string name="delete_todos_message">Are you sure you want to delete %1$d selected todo(s)?</string>

    <!-- Speech recognition -->
    <string name="dictate">Dictate</string>
    <string name="speech_not_available">Speech recognition is not available on this device.</string>
    <string name="permission_audio_required">Microphone permission is required for dictation.</string>
    <string name="speech_start">Listening…</string>
    <string name="speech_stop">Stop</string>
    <string name="speech_error">Speech recognition error: %1$d</string>

    <!-- Location / Geofence helper strings (missing) -->
    <string name="select_location_first">Select location first.</string>
    <string name="error_location_required">Please select a location first.</string>
    <string name="permission_location_required">Location permission is required.</string>
    <string name="permission_background_location_required">Background location permission is required.</string>
    <string name="geofence_added">Geofence added</string>
    <string name="geofence_add_failed">Failed to add geofence: %1$s</string>

</resources>